# idatt2104_2026

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  codecov.yml
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/crdt/: gcounter.rs  mod.rs  orset.rs  sequence.rs
backend/src/network/: mod.rs  peer.rs  protocol.rs
backend/src/storage/: mod.rs  persistence.rs
backend/src/ui/: cli.rs  mod.rs  ws.rs
backend/tests/: gcounter_tests.rs  integration_tests.rs  orset_tests.rs  sequence_tests.rs
docs/: ARCHITECTURE.md  Detailed plan.md  ci-coverage-decision.md
frontend/: README.md  app.js  index.html  styles.css
