[workspace]
resolver = "2"
members = ["backend"]

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "MIT"
authors = ["IDATT2104 2026 group"]

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
tokio-tungstenite = "0.23"
uuid = { version = "1.10", features = ["v4", "serde"] }
