[package]
name = "rustcrdt-node"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Peer-to-peer CRDT collaborative editor node (IDATT2104)."

[lib]
name = "rustcrdt"
path = "src/lib.rs"

[[bin]]
name = "rustcrdt-node"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = "1.5"

